# TianLi.TruthEye-Inface

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-window-platform.yml
source/: CMakeLists.txt  TianLi.TruthEye.Inface.cpp  inface.version.rc.in
test/: CMakeLists.txt
test/c/: CMakeLists.txt  main.cpp
test/csharp/: CMakeLists.txt  Program.cs
